# LibManagmentSystem

./: .env.example  .gitignore  Dockerfile  Dockerfile-test  README.md  alembic.ini  docker-compose-test.yml  docker-compose.yml  pyproject.toml  pytest.ini
migrations/: env.py
migrations/versions/: 03582aa6425d_nulluble_birthdate.py  0c29418ac76e_initial_revision.py  5127547cc9f7_fix_borrow_model.py  648eadf45d22_author_book_add_m_to_m.py  69ea73a98d76_change_postgres_datetime_with_tz.py  8a90d1246e79_user_is_active_flag_add.py  927de6becd43_refactor_models.py  93926ce30e0e_add_autoincrement.py  9d18fa1fc79d_initial.py  e9dc4d50f463_add_isbn_field_to_borrow_model.py
script/: run_server.sh  run_tests.sh
src/: config.py  filters.py  logger.py  main.py  security.py
src/api/: __init__.py  auth.py  author.py  book.py  borrows.py  genre.py  publisher.py
src/database/: base.py
src/database/models/: __init__.py  author.py  book.py  borrow_history.py  borrows.py  genre.py  many_to_many.py  publisher.py  user.py
src/dependencies/: auth.py  service.py
src/dto/: repository.py  service.py
src/repositories/: author.py  base.py  book.py  borrows.py  genre.py  publisher.py  user.py
src/schemas/: auth.py  author.py  book.py  borrows.py  exception.py  genre.py  publisher.py  user.py
src/services/: auth.py  author.py  book.py  borrows.py  genre.py  publisher.py
tests/: conftest.py  test_schemas_validation.py  test_services.py
